--- a/wp-content/themes/understrap/sass/theme/custom/_members.scss
+++ b/wp-content/themes/understrap/sass/theme/custom/_members.scss
@@ -40,7 +40,8 @@
 		color: $white;
 		display: block;
 		float: left;
-		font-size: 1.333rem;
+		// font-size: 1.333rem;
+		font-size: 15px;
 		margin-bottom: 15px;
 		padding: 15px 10px;
 		width: 100%;
@@ -85,7 +86,7 @@
 	color: $white;
 	overflow: hidden;
 	text-align: center;
-	margin: 15px auto;
+	margin: 10px auto;
 
 	&:before,
 	&:after {
